--- a/lib/libcrypto/man/EVP_add_cipher.3
+++ b/lib/libcrypto/man/EVP_add_cipher.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: EVP_add_cipher.3,v 1.3 2023/08/25 10:54:44 tb Exp $
+.\" $OpenBSD: EVP_add_cipher.3,v 1.4 2023/08/25 11:43:14 tb Exp $
 .\"
 .\" Copyright (c) 2023 Theo Buehler <tb@openbsd.org>
 .\"
@@ -175,3 +175,6 @@ first appeared in OpenSSL 0.9.4 and have been available since
 Key-value pairs already added before an error occurred
 remain in the global associative array,
 leaving it in an unknown state.
+.Pp
+While aliases can be added and removed, there is no dedicated API
+to remove added ciphers or digests.
