--- a/lib/libcrypto/man/EVP_CIPHER_CTX_get_cipher_data.3
+++ b/lib/libcrypto/man/EVP_CIPHER_CTX_get_cipher_data.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: EVP_CIPHER_CTX_get_cipher_data.3,v 1.1 2023/08/25 18:22:41 schwarze Exp $
+.\" $OpenBSD: EVP_CIPHER_CTX_get_cipher_data.3,v 1.2 2023/08/26 06:19:09 jsg Exp $
 .\" full merge up to: OpenSSL 99d63d46 Oct 26 13:56:48 2016 -0400
 .\"
 .\" This file was written by Matt Caswell <matt@openssl.org>
@@ -48,7 +48,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 .\" OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 25 2023 $
+.Dd $Mdocdate: August 26 2023 $
 .Dt EVP_CIPHER_CTX_GET_CIPHER_DATA 3
 .Os
 .Sh NAME
@@ -80,7 +80,7 @@ below).
 .Pp
 .Fn EVP_CIPHER_CTX_set_cipher_data
 allows an application or engine to replace the existing cipher data
-with new data, transfering ownership of
+with new data, transferring ownership of
 .Fa cipher_data
 to the
 .Fa ctx
