--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.582 2023/08/22 03:51:45 jsg Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.583 2023/09/02 17:19:57 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 22 2023 $
+.Dd $Mdocdate: September 2 2023 $
 .Dt BSD.PORT.MK 5
 .Os
 .Sh NAME
@@ -918,11 +918,25 @@ Invoked as make show=name, show the contents of ${name}.
 Invoked as make show="name1 name2 ...", show the contents of
 ${name1} ${name2} ...,
 one variable value per line.
+.It Ev ALL_DISTFILES
+List of all actual files coming from every
+.Ev DISTFILES*
+setting, after applying the
+.Sq Ar filename Ns { Ns Ar url Ns } Ns Ar sufx
+conversion, occasionally useful for setting
+.Ev EXTRACT_ONLY
+manually.
 .It Ev ALL_FAKE_FLAGS
 Flags passed to ${MAKE} invocations during the fake process.
 Equals
 .Li ${MAKE_FLAGS} ${DESTDIRNAME}=${WRKINST} ${FAKE_FLAGS} .
 Read-only.
+.It Ev ALL_PATCHFILES
+List of all actual files coming from every
+.Ev PATCHFILES*
+setting, after applying the
+.Sq Ar filename Ns { Ns Ar url Ns } Ns Ar sufx
+conversion.
 .It Ev ALL_TEST_ENV
 Environment passed to test.
 Equals
