--- a/usr.sbin/radiusd/radiusd.conf.5
+++ b/usr.sbin/radiusd/radiusd.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: radiusd.conf.5,v 1.15 2022/12/13 00:59:53 yasuoka Exp $
+.\"	$OpenBSD: radiusd.conf.5,v 1.16 2023/09/04 12:28:18 yasuoka Exp $
 .\"
 .\" Copyright (c) 2014 Esdenera Networks GmbH
 .\" Copyright (c) 2014 Internet Initiative Japan Inc.
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: December 13 2022 $
+.Dd $Mdocdate: September 4 2023 $
 .Dt RADIUSD.CONF 5
 .Os
 .Sh NAME
@@ -192,18 +192,18 @@ client 192.168.0.0/24 {
 	msgauth-required yes
 }
 
-module load "bsdauth" "/usr/libexec/radiusd/radiusd_bsdauth"
-module set "bsdauth"  "restrict-group" "operator"
+module load bsdauth "/usr/libexec/radiusd/radiusd_bsdauth"
+module set bsdauth  restrict-group "operator"
 
-module load "radius" "/usr/libexec/radiusd/radiusd_radius"
-module set "radius" "secret" "testing123"
-module set "radius" "server" "127.0.0.1"
+module load radius "/usr/libexec/radiusd/radiusd_radius"
+module set radius secret "testing123"
+module set radius server "127.0.0.1"
 
 authenticate *@example.com {
-	authenticate-by "radius"
+	authenticate-by radius
 }
 authenticate * {
-	authenticate-by "bsdauth"
+	authenticate-by bsdauth
 }
 .Ed
 .Sh SEE ALSO
